use one configuration file for all systems

--- a/configure.ac
+++ b/configure.ac
@@ -114,13 +114,19 @@ esac
 
 case "${host}" in
 	*-mingw*|*-winnt*|*-cygwin*)
-		DEBUG_FILE="%TEMP%\opensc-debug.log"
+		DEBUG_FILE="%TEMP%\\\opensc-debug.log"
+		PROFILE_DIR_DEFAULT="obtained from windows registers"
+		PROFILE_DIR="\"\""
 	;;
 	*)
 		DEBUG_FILE="/tmp/opensc-debug.log"
+		PROFILE_DIR="\$(pkgdatadir)"
+		PROFILE_DIR_DEFAULT="\$(pkgdatadir)"
 	;;
 esac
 AC_DEFINE_UNQUOTED([DEBUG_FILE], ["${DEBUG_FILE}"], [Debug file])
+AC_DEFINE_UNQUOTED([PROFILE_DIR], ["${PROFILE_DIR}"], [Directory of profiles])
+AC_DEFINE_UNQUOTED([PROFILE_DIR_DEFAULT], ["${PROFILE_DIR_DEFAULT}"], [Default directory of profiles])
 
 AC_ARG_ENABLE(
 	[strict],
@@ -512,15 +518,19 @@ if test "${enable_sm}" = "yes"; then
 	case "${host}" in
 		*-mingw*|*-winnt*|*-cygwin*)
 			DEFAULT_SM_MODULE="smm-local.dll"
+			DEFAULT_SM_MODULE_PATH="\# module_path = \"\";"
 		;;
 		*-apple-*)
 			DEFAULT_SM_MODULE="libsmm-local.3.dylib"
+			DEFAULT_SM_MODULE_PATH="module_path = \$(libdir);"
 		;;
 		*)
 			DEFAULT_SM_MODULE="libsmm-local.so.3"
+			DEFAULT_SM_MODULE_PATH="module_path = \$(libdir);"
 		;;
 	esac
 	AC_DEFINE_UNQUOTED([DEFAULT_SM_MODULE], ["${DEFAULT_SM_MODULE}"], [Default SM module])
+	AC_DEFINE_UNQUOTED([DEFAULT_SM_MODULE_PATH], ["${DEFAULT_SM_MODULE_PATH}"], [Default SM module path])
 fi
 
 if test "${enable_openct}" = "yes"; then
@@ -697,7 +707,10 @@ AC_SUBST([OPTIONAL_OPENCT_LIBS])
 AC_SUBST([OPTIONAL_PCSC_CFLAGS])
 AC_SUBST([LIBRARY_BITNESS])
 AC_SUBST([DEFAULT_SM_MODULE])
+AC_SUBST([DEFAULT_SM_MODULE_PATH])
 AC_SUBST([DEBUG_FILE])
+AC_SUBST([PROFILE_DIR])
+AC_SUBST([PROFILE_DIR_DEFAULT])
 
 AM_CONDITIONAL([ENABLE_MAN], [test "${enable_man}" = "yes"])
 AM_CONDITIONAL([ENABLE_ZLIB], [test "${enable_zlib}" = "yes"])
