--- a/etc/Makefile.am
+++ b/etc/Makefile.am
@@ -1,12 +1,12 @@
-MAINTAINERCLEANFILES = $(srcdir)/Makefile.in $(srcdir)/opensc.conf.win
-DISTCLEANFILES = opensc.conf opensc.conf.win
+MAINTAINERCLEANFILES = $(srcdir)/Makefile.in
+DISTCLEANFILES = opensc.conf
 
 EXTRA_DIST = Makefile.mak
 
 SUFFIXES = .in
 
-dist_noinst_DATA = opensc.conf.in opensc.conf.win.in
-nodist_noinst_DATA = opensc.conf opensc.conf.win # For Windows MSVC build
+dist_noinst_DATA = opensc.conf.in
+nodist_noinst_DATA = opensc.conf
 
 # Make sure we build this every time
 # as there is no dependency for this.
@@ -18,9 +18,12 @@ opensc.conf: opensc.conf.in force
 	@sed \
 		-e 's|@pkgdatadir[@]|$(pkgdatadir)|g' \
 		-e 's|@libdir[@]|$(libdir)|g' \
+		-e 's|@DEBUG_FILE[@]|$(DEBUG_FILE)|g' \
 		-e 's|@DEFAULT_PCSC_PROVIDER[@]|$(DEFAULT_PCSC_PROVIDER)|g' \
 		-e 's|@DEFAULT_SM_MODULE[@]|$(DEFAULT_SM_MODULE)|g' \
-		-e 's|@DEBUG_FILE[@]|$(DEBUG_FILE)|g' \
+		-e 's|@DEFAULT_SM_MODULE_PATH[@]|$(DEFAULT_SM_MODULE_PATH)|g' \
+		-e 's|@PROFILE_DIR[@]|$(PROFILE_DIR)|g' \
+		-e 's|@PROFILE_DIR_DEFAULT[@]|$(PROFILE_DIR_DEFAULT)|g' \
 		< $< > $@
 
 install-exec-hook: opensc.conf
