--- a/etc/opensc.conf.in
+++ b/etc/opensc.conf.in
@@ -32,9 +32,9 @@ app default {
 
 	# PKCS#15 initialization / personalization
 	# profiles directory for pkcs15-init.
-	# Default: @pkgdatadir@
+	# Default: @PROFILE_DIR_DEFAULT@
 	#
-	# profile_dir = @pkgdatadir@;
+	# profile_dir = @PROFILE_DIR@;
 
 	# Paranoid memory allocation.
 	#
@@ -335,12 +335,11 @@ app default {
 	}
 
 	secure_messaging local_authentic  {
-		#path to ans name of external SM module
-		#module_name = @DEFAULT_SM_MODULE@;
-		#module_path = @libdir@;
+		# name of external SM module
+		# module_name = @DEFAULT_SM_MODULE@;
 		# directory with external SM module
 		# Default: defined by windows register
-		# module_path = "";
+		@DEFAULT_SM_MODULE_PATH@
 
 		# specific data to tune the module initialization
 		# module_data = "Here can be your SM module init data";
@@ -363,8 +362,8 @@ app default {
 
 	secure_messaging local_gemalto_iam  {
 		module_name = @DEFAULT_SM_MODULE@;
-		module_path = @libdir@;
-		#module_data = "";
+		@DEFAULT_SM_MODULE_PATH@
+		# module_data = "";
 		type = acl;	     # transmit, acl
 
 		ifd_serial = "11:22:33:44:55:66:77:88";
@@ -382,7 +381,8 @@ app default {
 
 	secure_messaging local_amos  {
 		module_name = @DEFAULT_SM_MODULE@;
-		module_path = @libdir@;
+		@DEFAULT_SM_MODULE_PATH@
+		# module_data = "";
 		mode = acl;
 		ifd_serial = "11:22:33:44:55:66:77:88";
 		keyset_02_enc = "ENCROECHANTILLON";
@@ -391,7 +391,8 @@ app default {
 
 	secure_messaging local_amos_eid  {
 		module_name = @DEFAULT_SM_MODULE@;
-		module_path = @libdir@;
+		@DEFAULT_SM_MODULE_PATH@
+		# module_data = "";
 		mode = acl;
 		ifd_serial = "11:22:33:44:55:66:77:88";
 		keyset_E828BD080FD2504543432D654944_03_enc = "RW_PUBL_ENC_TEST";
@@ -400,8 +401,8 @@ app default {
 
 	secure_messaging local_adele  {
 		module_name = @DEFAULT_SM_MODULE@;
-		module_path = @libdir@;
-		#module_data = "";
+		@DEFAULT_SM_MODULE_PATH@
+		# module_data = "";
 		type = acl;	     # transmit, acl
 
 		ifd_serial = "11:22:33:44:55:66:77:88";
