fixed generating opensc.conf in AppVeyor

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -61,6 +61,7 @@ build_script:
   - bash -c "exec 0</dev/null && ./bootstrap"
   # disable features to speed up the script
   - bash -c "exec 0</dev/null && ./configure --disable-openssl --disable-readline --disable-zlib || cat config.log"
+  - bash -c "make -C etc opensc.conf"
   - cp win32/winconfig.h config.h
   - nmake /f Makefile.mak %NMAKE_ARCH% %NMAKE_DEBUG%
   - cd win32 && nmake /f Makefile.mak %NMAKE_ARCH% %NMAKE_DEBUG% VSVER=%VSVER% OpenSC.msi
