--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,11 +17,6 @@ environment:
 
 matrix:
   allow_failures:
-    # the prebuilt zlib is 32 bit only
-    - platform: x64
-      configuration: Debug
-    - platform: x64
-      configuration: Release
     # not included in AppVeyor right now
     - platform: x64
       VSVER: 10
@@ -59,11 +54,15 @@ install:
           Start-FileDownload https://slproweb.com/download/${env:OPENSSL_PF}OpenSSL-${env:OPENSSL_VER}.exe -FileName C:\WinOpenSSL.exe
           C:\WinOpenSSL.exe /SILENT /VERYSILENT /SP- /SUPPRESSMSGBOXES /NORESTART
         }
-        If (!(Test-Path -Path "C:\zlib-dll" )) {
-          appveyor DownloadFile "https://prdownloads.sourceforge.net/libpng/zlib${env:ZLIB_VER}-dll.zip" -FileName zlib-dll.zip
-          7z x zlib-dll.zip -oC:\zlib-dll
+        $env:NMAKE_EXTRA="OPENSSL_DEF=/DENABLE_OPENSSL ${env:NMAKE_EXTRA}"
+        # the prebuilt zlib is 32 bit only
+        If ($env:Platform -Match "x86") {
+          If (!(Test-Path -Path "C:\zlib-dll" )) {
+            appveyor DownloadFile "https://prdownloads.sourceforge.net/libpng/zlib${env:ZLIB_VER}-dll.zip" -FileName zlib-dll.zip
+            7z x zlib-dll.zip -oC:\zlib-dll
+          }
+          $env:NMAKE_EXTRA="ZLIB_DEF=/DENABLE_ZLIB ${env:NMAKE_EXTRA}"
         }
-        $env:NMAKE_EXTRA="OPENSSL_DEF=/DENABLE_OPENSSL ZLIB_DEF=/DENABLE_ZLIB ${env:NMAKE_EXTRA}"
       }
   - ps: $env:VSCOMNTOOLS=(Get-Content ("env:VS" + "$env:VSVER" + "0COMNTOOLS"))
   - echo "Using Visual Studio %VSVER%.0 at %VSCOMNTOOLS%"
