--- a/configure.ac
+++ b/configure.ac
@@ -494,6 +494,10 @@ case "${enable_openssl}" in
 		have_openssl="no"
 	;;
 	detect)
+		saved_CFLAGS="${CFLAGS}"
+		CFLAGS="${CFLAGS} ${OPENSSL_CFLAGS}"
+		AC_CHECK_HEADERS([openssl/crypto.h],,[have_openssl="no"])
+		CFLAGS="${saved_CFLAGS}"
 		if test "${have_openssl}" = "yes"; then
 			enable_openssl="yes"
 		else
