--- a/win32/OpenSC.wxs.in
+++ b/win32/OpenSC.wxs.in
@@ -176,6 +176,9 @@
                 <Component Id="dnie_tool.exe" Guid="*" Win64="$(var.Win64YesNo)">
                   <File Source="$(var.SOURCE_DIR)\src\tools\dnie-tool.exe" Vital="yes"/>
                 </Component>
+                <Component Id="gids_tool.exe" Guid="*" Win64="$(var.Win64YesNo)">
+                  <File Source="$(var.SOURCE_DIR)\src\tools\gids-tool.exe" Vital="yes"/>
+                </Component>
               <?endif ?>
             </Directory>
             <?ifdef OpenSSL ?>
@@ -270,6 +273,9 @@
                 <Component Id="isoApplet.profile" Guid="*" Win64="$(var.Win64YesNo)">
                   <File Source="$(var.SOURCE_DIR)\src\pkcs15init\isoApplet.profile"/>
                 </Component>
+                <Component Id="gids.profile" Guid="*" Win64="$(var.Win64YesNo)">
+                  <File Source="$(var.SOURCE_DIR)\src\pkcs15init\gids.profile"/>
+                </Component>
               </Directory>
             <?endif ?>
           </Directory>
@@ -327,6 +333,7 @@
           <ComponentRef Id="westcos_tool.exe"/>
           <ComponentRef Id="sc_hsm_tool.exe"/>
           <ComponentRef Id="dnie_tool.exe"/>
+          <ComponentRef Id="gids_tool.exe"/>
           <ComponentRef Id="cyberflex.profile"/>
           <ComponentRef Id="flex.profile"/>
           <ComponentRef Id="gpk.profile"/>
@@ -357,6 +364,7 @@
           <ComponentRef Id="schsm.profile"/>
           <ComponentRef Id="openpgp.profile"/>
           <ComponentRef Id="isoApplet.profile"/>
+          <ComponentRef Id="gids.profile"/>
         <?endif ?>
       </Feature>
       <Feature Id="OpenSC_menu" Level="1" Title="Start menu entries" Description="Start menu entries: link to documentation">
